--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
+/* geral */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: rgb(12, 34, 73);
+  font-family: 'Times New Roman', Times, serif;
+  border: none;
+  
+ 
+}
+body {
+  background-color: rgb(90, 90, 170);
+}
+h1{
+  text-align: center;
+  font-size: 20px;
+}
+
+#login-container {
+  
+  border-radius: 15px;
+  border: solid 1px rgba(68, 68, 68, 0.89);
+  background-color: #FFF;
+  width: 450px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 30px;
+  margin-top: 10vh;
   text-align: center;
 }
+form{ 
+  margin-top: 20px;
+  margin-bottom: 20px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+}
+/*Link*/
+a {
+  font-size: 18px;
+  float: left;
+  display: inline;
+  margin-top: 10px;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:hover{
+  color: blue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type=email],[type=password]{
+  border:solid 1px rgba(189, 187, 187, 0.808);
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+#botao-cadastrar-se:hover{
+  background-color: gray;
+  color: #FFF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#botao-cadastrar-se{
+  text-align: center;
+  background-color: rgba(219, 214, 214, 0.774);
+  color: blue;
+  width: 120px;
+  
+}
+#botao-entrar:hover{
+  background-color: blue;
+ 
+
+}
+#botao-entrar {
+  text-align: center;
+  background-color: rgb(3, 74, 226);
+}
+input[type=submit]{
+  
+  margin-top: 15%;
+  color: #FFF;
+  width: 100px;
+  height: 45px;
+  display:inline-block;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding: 0px;
+}
+label, input {
+font-size: 20px;
+border-radius: 3px;
+text-align: left;
+display: block;
+width: 100%;
+height: 45px;
+padding: 10px 1px;
 }
