--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,18 @@
   color: rgb(12, 34, 73);
   font-family: 'Times New Roman', Times, serif;
   border: none;
-  
- 
 }
+
 body {
-  background-color: rgb(90, 90, 170);
+  background-color: rgb(47, 74, 124);
 }
-h1{
+
+h1 {
   text-align: center;
   font-size: 20px;
 }
 
 #login-container {
-  
   border-radius: 15px;
   border: solid 1px rgba(68, 68, 68, 0.89);
   background-color: #FFF;
@@ -30,12 +29,13 @@ h1{
   margin-top: 10vh;
   text-align: center;
 }
-form{ 
+
+form {   
   margin-top: 20px;
   margin-bottom: 20px;
 
 }
-/*Link*/
+
 a {
   font-size: 18px;
   float: left;
@@ -44,38 +44,38 @@ a {
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   color: blue;
 }
 
-input[type=email],[type=password]{
+input[type=email],[type=password] {
   border:solid 1px rgba(189, 187, 187, 0.808);
   padding: 10px;
 }
 
-#botao-cadastrar-se:hover{
+#botao-cadastrar-se:hover {
   background-color: gray;
   color: #FFF;
 }
 
-#botao-cadastrar-se{
+#botao-cadastrar-se {
   text-align: center;
   background-color: rgba(219, 214, 214, 0.774);
   color: blue;
   width: 120px;
   
-}
-#botao-entrar:hover{
-  background-color: blue;
- 
+} 
 
+#botao-entrar:hover {
+  background-color: blue;
 }
+
 #botao-entrar {
   text-align: center;
   background-color: rgb(3, 74, 226);
-}
-input[type=submit]{
   
+}
+input[type=submit] {
   margin-top: 15%;
   color: #FFF;
   width: 100px;
@@ -86,11 +86,23 @@ input[type=submit]{
   padding: 0px;
 }
 label, input {
-font-size: 20px;
-border-radius: 3px;
-text-align: left;
-display: block;
-width: 100%;
-height: 45px;
-padding: 10px 1px;
+  font-size: 20px;
+  border-radius: 3px;
+  text-align: left;
+  display: block;
+  width: 100%;
+  height: 45px;
+  padding: 10px 1px;
+}
+.message {
+  margin-top: 3px;
+  font-size: 17px; 
+  
+}
+.success {
+  color: rgb(0, 185, 0);
+}
+
+.error {
+  color: red;
 }
