--- a/src/App.css
+++ b/src/App.css
@@ -66,16 +66,12 @@ input[type=email],[type=password] {
   
 } 
 
-#botao-entrar:hover {
-  background-color: blue;
-}
-
 #botao-entrar {
   text-align: center;
   background-color: rgb(3, 74, 226);
   
 }
-input[type=submit] {
+input[type=submit], input[type=button] {
   margin-top: 15%;
   color: #FFF;
   width: 100px;
@@ -105,4 +101,16 @@ label, input {
 
 .error {
   color: red;
+}
+#res {
+  background-color: rgb(21, 199, 21);
+  width: 400px;
+  height: 40px;
+  text-align: left;
+  display: block;
+  padding: 6px 1px;
+  text-align: center;
+  font-size: 25px;
+  border-radius: 5px;
+  color: #FFF;
 }
