--- a/src/App.css
+++ b/src/App.css
@@ -14,19 +14,41 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  background-color: #FFF;
+  height: 45px;
+  
+}
+#Sair {
+  background-color: rgb(218, 40, 40);
+  height: 25px;
+  width: 50px;
+  color: #FFF;
+  border-radius: 5px;
+  float: right;
+  margin-right: 15px;
 }
 
+#link{
+  background-color: rgba(219, 214, 214, 0.774);
+  color: blue;
+  width: 120px;
+  height: 45px;
+  border-radius: 5px;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-left: 250px;
+}
 #login-container {
   border-radius: 15px;
   border: solid 1px rgba(68, 68, 68, 0.89);
   background-color: #FFF;
-  width: 450px;
-  height: 400px;
+  width: 550px;
+  height: 500px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 30px;
-  margin-top: 10vh;
+  margin-top: 5vh;
   text-align: center;
 }
 
@@ -57,20 +79,23 @@ input[type=email],[type=password] {
   background-color: gray;
   color: #FFF;
 }
-
+#botao-entrar {
+  float: right;
+  text-align: center;
+  margin-top: 40px;
+  background-color: rgb(3, 74, 226);
+  
+}
 #botao-cadastrar-se {
+  float: right;
   text-align: center;
   background-color: rgba(219, 214, 214, 0.774);
   color: blue;
   width: 120px;
-  
+  display: flex;
+	justify-content: center;
 } 
 
-#botao-entrar {
-  text-align: center;
-  background-color: rgb(3, 74, 226);
-  
-}
 input[type=submit], input[type=button] {
   margin-top: 15%;
   color: #FFF;
@@ -103,13 +128,11 @@ label, input {
   color: red;
 }
 #res {
-  background-color: rgb(21, 199, 21);
-  width: 400px;
+  background-color: rgb(47, 199, 27);
+  width: 300px;
   height: 40px;
-  text-align: left;
-  display: block;
-  padding: 6px 1px;
-  text-align: center;
+  margin-top: 200px;
+  margin-left: 80px;
   font-size: 25px;
   border-radius: 5px;
   color: #FFF;
