--- a/src/App.css
+++ b/src/App.css
@@ -3,115 +3,96 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: rgb(12, 34, 73);
   font-family: 'Times New Roman', Times, serif;
   border: none;
 }
 
 body {
-  background-color: rgb(47, 74, 124);
+  background-color: rgba(122, 122, 122, 0.822);
 }
 
 h1 {
   text-align: center;
-  font-size: 25px;
-  background-color: #FFF;
-  height: 45px;
+  font-size: 40px;
+  font-weight: 100;
+  margin-top: 5px;
+  margin-bottom: 20px;
+
   
 }
 
 
 #login-container {
-  border-radius: 15px;
-  border: solid 1px rgba(68, 68, 68, 0.89);
+  border-radius: 5px;
+  border: solid 1px rgba(121, 119, 119, 0.808);
   background-color: #FFF;
   width: 470px;
   height: 500px;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 30px;
+  padding: 20px 40px;
   margin-top: 5vh;
   text-align: center;
 }
 
 form {   
-  margin-top: 20px;
-  margin-bottom: 20px;
-
-}
-
-a {
-  font-size: 18px;
-  float: left;
+  margin-top: 30px;
+  margin-bottom: 0px;
   display: inline;
-  margin-top: 10px;
-  text-decoration: none;
 }
+
 
 a:hover {
   color: blue;
 }
 
 input[type=email],[type=password] {
-  border:solid 1px rgba(189, 187, 187, 0.808);
-  padding: 10px;
+  border:solid 1px rgba(158, 156, 156, 0.808);
+  margin-top: 20px;
+  margin-bottom: 0px;
+
 }
 
 #botao-cadastrar-se:hover {
-  background-color: gray;
+  background-color: #666666;
   color: #FFF;
 }
 
 #botao-cadastrar-se {
-  text-align: center;
-  background-color: rgba(219, 214, 214, 0.774);
-  color: blue;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
+  color: rgb(16, 159, 241); 
   font-size: 20px;
-  
 } 
 
 #botao-entrar {
+  display: block;
   text-align: center;
-  background-color: rgb(13, 77, 216);
-  float: right;
-  margin-top: 10px;
-
-  
+  font-size: 20px;
+  background-color: #3498db;
+  font-weight: bold;
 }
+
 input[type=submit], input[type=button] {
-  margin-top: 15%;
-  color: #FFF;
-  width: 100px;
-  height: 45px;
-  display:inline-block;
-  margin-left: 10px;
-  border-radius: 5px;
-  padding: 0px;
+color: #FFF;
+font-size: 25px;
 }
 label, input {
-  font-size: 20px;
   border-radius: 3px;
   text-align: left;
   display: block;
   width: 100%;
   height: 45px;
-  padding: 10px 1px;
 }
 .message {
-  margin-top: 3px;
-  font-size: 17px; 
-  
-}
+  font-size: 20px; 
+  }
+
 .success {
   color: rgb(0, 185, 0);
 }
-
+  
 .error {
   color: red;
-}
+ }
 button:disabled.true,
 button[disabled]{
   border: 1px solid #999999;
@@ -119,23 +100,24 @@ button[disabled]{
   color: #666666;
 }
 #res {
-  color: rgb(224, 14, 14);
-  font-size: 23px;
+  color: rgb(250, 12, 12);
+  font-size: 20px;
   border-radius: 5px;
-  height: 40px;  
-  float: left;
-  margin-left: 70px;
-  width: 300px;
-  margin-top: 30px;
+  
+  margin-top: 0px;
+}
+#link:hover{
+  color: blue;
 }
 #link{
-  background-color: rgba(219, 214, 214, 0.774);
-  color: blue;
-  width: 120px;
-  height: 45px;
-  border-radius: 5px;
   font-size: 20px;
-  margin-left: 170px;
+  color: rgb(0, 149, 248);
+ margin-bottom: 100px;
+ padding: 10px;
+ text-decoration: none;
+}
+footer{
+  float: right;
 }
 #Sair {
   background-color: rgb(218, 40, 40);
