--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ input[type=email],[type=password] {
   border:solid 1px rgba(158, 156, 156, 0.808);
   margin-top: 20px;
   margin-bottom: 0px;
+  display: inline-block;
 
 }
 
@@ -99,11 +100,13 @@ button[disabled]{
   color: #666666;
 }
 #res {
-  color: rgb(250, 12, 12);
+  color: rgb(247, 97, 10);
   font-size: 20px;
   border-radius: 5px;
-  
-  margin-top: 0px;
+  display: inline-flex;
+  margin-top: 1px;
+  margin-bottom: 0px;
+  margin-left: 120px;
 }
 #link:hover{
   color: blue;
@@ -120,8 +123,11 @@ footer{
 }
 #Sair {
   background-color: rgb(218, 40, 40);
-  height: 25px;
+  height: 30px;
   width: 50px;
+  margin-top: 6px;
+  text-decoration: none;
+  font-size: 20px;
   color: #FFF;
   border-radius: 5px;
   float: right;
