--- a/src/Cadastrar.css
+++ b/src/Cadastrar.css
@@ -12,12 +12,13 @@
     background-color: rgb(124, 126, 129);
   }
   
-  h1 {
+  #tituloCadastrar {
     text-align: center;
-    font-size: 25px;
-    background-color: #FFF;
-    height: 45px;
-    
+    font-size: 40px;
+    font-weight: 100;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  
   }
   
   
@@ -35,21 +36,28 @@
   }
   
   form {   
-    margin-top: 60px;
-    margin-bottom: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   
   }
  
   a:hover {
     color: blue;
   }
-  
-  input[type=email],[type=password] {
+  #name {
+    width: 50%;
+    display: flex;
+  }
+
+  #lastname {
+    width: 40%;
+    display: flex;
+  }
+  input[type=email],[type=password],[type=text] {
     border:solid 1px rgba(102, 102, 102, 0.808);
     padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  
+    margin-top: 0;
+    
   }
   
   #botao-cadastrar-se:hover {
@@ -71,19 +79,14 @@
     display: block;
     text-align: center;
     background-color: #3498db;
-    margin-top: 15px ;
+    margin-top: 0px ;
     
   }
-  #block{
-    display: block;
-    margin-left: 10px;
-    margin-right: 10px;
-    
-  }
+ 
   input[type=submit], input[type=button] {
   color: #FFF;
   font-size: 25px;
-  margin-top: 20px;
+  margin-top: 10px;
   }
   label, input {
     font-size: 20px;
