--- a/src/App.css
+++ b/src/App.css
@@ -4,25 +4,19 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Times New Roman', Times, serif;
-  border: none;
+  
 }
 
 body {
   background-color: rgba(172, 169, 169, 0.822);
 }
 
-#cabecalhoDashboard {
-  background-color: #3498db;
-  color: #FFF;
-  height: 50px;
-  border-bottom: 1px solid rgb(53, 53, 53);
-  text-align: center;
-  font-size: 35px;
-  font-weight: 800;
-  margin-top: 0px;
-  margin-bottom: 40px;
-
-  
+#menu {
+  margin-left: 0px;
+  width: 32px;
+  margin-top: -5px;
+  margin-bottom: 0px;
+  height: 30px;
 }
 h1 {
   text-align: center;
@@ -31,7 +25,7 @@ h1 {
   margin-top: 5px;
   margin-bottom: 40px;
 
-  
+
 }
 
 #login-container {
@@ -47,7 +41,7 @@ h1 {
   text-align: center;
 }
 
-form {   
+form {
   margin-top: 30px;
   margin-bottom: 0px;
   display: inline;
@@ -58,14 +52,79 @@ a:hover {
   color: blue;
 }
 
-input[type=email],[type=password] {
-  border:solid 1px rgba(158, 156, 156, 0.808);
+input[type=email],
+[type=password] {
+  border: solid 1px rgba(158, 156, 156, 0.808);
   margin-top: 20px;
   margin-bottom: 0px;
   display: inline-block;
 
 }
 
+.menuNav {
+  width: 100%;
+  height: 60px;
+  color: #FFF;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 2px solid #3498db;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+  float: right;
+  margin-right: 10px;
+}
+
+ul li {
+  float: left;
+  margin-top: 10px;
+}
+
+ul li a {
+  width: 110px;
+  color: rgb(32, 132, 214);
+  display: block;
+  text-decoration: none;
+  font-size: 15px;
+  text-align: center;
+  padding: 12px;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+ul li ul {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+ul li ul li {
+  float: none;
+}
+
+ul li ul {
+  display: none;
+}
+
+ul li:hover ul {
+  display: block;
+  border-radius: 5px;
+}
+
+#logoSite {
+  margin-left: 15px;
+  margin-top: 15px;
+  float: left;
+  color: #017dcf;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#imagemDoUsuario {
+  height: 40px;
+}
 
 #botao-cadastrar-se:hover {
   background-color: #666666;
@@ -73,9 +132,9 @@ input[type=email],[type=password] {
 }
 
 #botao-cadastrar-se {
-  color: rgb(16, 159, 241); 
+  color: rgb(16, 159, 241);
   font-size: 20px;
-} 
+}
 
 #botao-entrar {
   display: block;
@@ -85,34 +144,40 @@ input[type=email],[type=password] {
   font-weight: bold;
 }
 
-input[type=submit], input[type=button] {
-color: #FFF;
-font-size: 25px;
+input[type=submit],
+input[type=button] {
+  color: #FFF;
+  font-size: 25px;
 }
-label, input {
+
+label,
+input {
   border-radius: 3px;
   text-align: left;
   display: block;
   width: 100%;
   height: 45px;
 }
+
 .message {
-  font-size: 20px; 
-  }
+  font-size: 20px;
+}
 
 .success {
   color: rgb(0, 185, 0);
 }
-  
+
 .error {
   color: red;
- }
+}
+
 button:disabled.true,
-button[disabled]{
+button[disabled] {
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
 }
+
 #resultado {
   color: rgb(247, 97, 10);
   font-size: 20px;
@@ -122,28 +187,25 @@ button[disabled]{
   margin-bottom: 0px;
   margin-left: 10px;
 }
-#link:hover{
+
+#link:hover {
   color: blue;
 }
-#link{
+
+#link {
   font-size: 20px;
   color: rgb(0, 149, 248);
- margin-bottom: 100px;
- padding: 10px;
- text-decoration: none;
+  margin-bottom: 100px;
+  padding: 10px;
+  text-decoration: none;
 }
-footer{
+
+footer {
   float: right;
 }
+
 #Sair {
   background-color: rgb(218, 40, 40);
-  height: 30px;
-  width: 50px;
-  margin-top: 6px;
-  text-decoration: none;
-  font-size: 20px;
   color: #FFF;
-  border-radius: 5px;
-  float: right;
-  margin-right: 15px;
+  border-radius: 0;
 }
