--- a/src/dash.css
+++ b/src/dash.css
@@ -18,3 +18,9 @@ height: 50px;
 background-color: rgb(76, 118, 235);
 color: rgb(247, 247, 247);
 }
+#menuNav{
+  width: 100%;
+  height: 80px;
+  color: red;
+  background-color: aqua;
+}
