--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,18 @@ body {
   background-color: rgba(172, 169, 169, 0.822);
 }
 
+@media screen and (max-width: 780px){
+ 
+#imagemDoUsuario {
+display: none;
+}
+#nameUser{
+display: none;
+}
+#logoSite{
+  text-align: center;
+}
+}
 #menu {
   margin-left: 0px;
   width: 32px;
@@ -23,7 +35,7 @@ h1 {
   font-size: 40px;
   font-weight: 100;
   margin-top: 5px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 
 
 }
@@ -32,8 +44,8 @@ h1 {
   border-radius: 5px;
   border: solid 1px rgba(80, 78, 78, 0.808);
   background-color: #FFF;
-  width: 470px;
-  height: 500px;
+  width: 450px;
+  height: 470px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 40px;
@@ -41,6 +53,18 @@ h1 {
   text-align: center;
 }
 
+#cadastrar-container {
+  border-radius: 5px;
+  border: solid 1px rgba(80, 78, 78, 0.808);
+  background-color: #FFF;
+  width: 500px;
+  height: 570px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 40px;
+  margin-top: 3vh;
+  text-align: center;
+}
 form {
   margin-top: 30px;
   margin-bottom: 0px;
@@ -55,8 +79,8 @@ a:hover {
 input[type=email],
 [type=password] {
   border: solid 1px rgba(158, 156, 156, 0.808);
-  margin-top: 20px;
-  margin-bottom: 0px;
+  margin-top: 30px;
+  margin-bottom: 15px;
   display: inline-block;
 
 }
@@ -137,8 +161,9 @@ ul li:hover ul {
 }
 
 #botao-entrar {
-  display: block;
+  display: inline-block;
   text-align: center;
+  margin-top: 10px;
   font-size: 20px;
   background-color: #3498db;
   font-weight: bold;
@@ -148,8 +173,15 @@ input[type=submit],
 input[type=button] {
   color: #FFF;
   font-size: 25px;
+  
 }
+input[type=text]  {
+  border: solid 1px rgba(158, 156, 156, 0.808);
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 15px;
 
+}
 label,
 input {
   border-radius: 3px;
@@ -157,10 +189,13 @@ input {
   display: block;
   width: 100%;
   height: 45px;
+  
 }
 
 .message {
-  font-size: 20px;
+  font-size: 19px;
+  margin-bottom: -20px;
+  margin-top: -10px;
 }
 
 .success {
@@ -178,11 +213,10 @@ button[disabled] {
   color: #666666;
 }
 
-#nomeUser {
+#nameUser {
   color: #3498db;
   font-size: 10px;
   border-radius: 5px;
-  display: inline-flex;
   margin-top: 1px;
   margin-bottom: 0px;
   margin-left: 0px;
@@ -193,8 +227,8 @@ button[disabled] {
   color: rgb(247, 97, 10);
   font-size: 20px;
   border-radius: 5px;
-  display: inline-flex;
-  margin-top: 1px;
+  display: block;
+  margin-top: 10px;
   margin-bottom: 0px;
   margin-left: 10px;
 }
@@ -205,10 +239,9 @@ button[disabled] {
 
 #link {
   font-size: 20px;
-  color: rgb(0, 149, 248);
+  color: rgb(0, 0, 0);
   margin-bottom: 100px;
   padding: 10px;
-  text-decoration: none;
 }
 
 footer {
