--- a/src/Cadastrar.css
+++ b/src/Cadastrar.css
@@ -45,7 +45,7 @@
     color: blue;
   }
   #name {
-    width: 50%;
+    
     display: flex;
   }
 
@@ -129,3 +129,19 @@
     display: block;
   }
   
+  #load {
+    width: 30px;
+    height: 30px;
+
+    border: rgba(0, 0, 0, 0.18) solid;
+    border-left-color: #e20202;
+    border-radius: 50%;
+    margin-top: 15px;
+    text-align: center;
+    display: inline-block;
+    display: none;
+    animation: loading 1.2s infinite linear;
+  }
+  @keyframes loading {
+    to {transform: rotate(360deg);}
+  }
