--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,7 @@ button[disabled] {
   border-radius: 5px;
   display: block;
   margin-top: 20px;
-  margin-bottom: 0px;
+  
   
 }
 
@@ -253,4 +253,21 @@ footer {
   background-color: rgb(218, 40, 40);
   color: #FFF;
   border-radius: 0;
+}
+
+#load {
+  width: 30px;
+  height: 30px;
+
+  border: rgba(0, 0, 0, 0.18) solid;
+  border-left-color: #e20202;
+  border-radius: 50%;
+  margin-top: 15px;
+  text-align: center;
+  display: inline-block;
+  display: none;
+  animation: loading 1.2s infinite linear;
+}
+@keyframes loading {
+  to {transform: rotate(360deg);}
 }
