--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,9 @@ display: none;
   margin-bottom: 0px;
   height: 30px;
 }
+h5{
+  color: green;
+}
 h1 {
   text-align: center;
   font-size: 40px;
@@ -63,6 +66,19 @@ h1 {
   margin-right: auto;
   padding: 20px 40px;
   margin-top: 3vh;
+  text-align: center;
+}
+
+#editar-container {
+  border-radius: 5px;
+  border: solid 1px rgba(80, 78, 78, 0.808);
+  background-color: #FFF;
+  width: 450px;
+  height: 470px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 40px;
+  margin-top: 5vh;
   text-align: center;
 }
 form {
@@ -165,6 +181,8 @@ ul li:hover ul {
   text-align: center;
   margin-top: 10px;
   font-size: 20px;
+  cursor: pointer;
+  transition: background .3s;
   background-color: #3498db;
   font-weight: bold;
 }
@@ -270,4 +288,7 @@ footer {
 }
 @keyframes loading {
   to {transform: rotate(360deg);}
+}
+#editarPerfil {
+  font-size: 15px;
 }
