--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ input[type=email],
 [type=password] {
   border: solid 1px rgba(158, 156, 156, 0.808);
   margin-top: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   display: inline-block;
 
 }
@@ -197,7 +197,7 @@ input[type=text]  {
   border: solid 1px rgba(158, 156, 156, 0.808);
   display: inline-block;
   margin-top: 20px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 
 }
 label,
@@ -211,9 +211,9 @@ input {
 }
 
 .message {
-  font-size: 19px;
-  margin-bottom: -20px;
-  margin-top: -10px;
+  font-size: 18px;
+  margin-bottom: -30px;
+  margin-top: -25px;
 }
 
 .success {
@@ -291,4 +291,7 @@ footer {
 }
 #editarPerfil {
   font-size: 15px;
+}
+input {
+  font-size: 20px;
 }
