--- a/src/Cadastrar.css
+++ b/src/Cadastrar.css
@@ -146,3 +146,22 @@
   @keyframes loading {
     to {transform: rotate(360deg);}
   }
+
+  .modal-header{
+font-size: 20px;
+font-weight: 600;
+color: rgb(29, 172, 0);
+  }
+  .modal-body{
+   font-size: 18px;
+   
+  }
+  #btn-primary{
+    font-size: 17px;
+    font-weight: 800;
+    height: 40px;
+  }
+  .fade.modal.show{
+    background-color: rgba(172, 169, 169, 0.171);
+    margin-top: -1vh;
+  }
