--- a/src/Cadastrar.css
+++ b/src/Cadastrar.css
@@ -148,9 +148,10 @@
   }
 
   .modal-header{
+    background-color: rgb(18, 252, 18);
 font-size: 20px;
 font-weight: 600;
-color: rgb(29, 172, 0);
+color: rgb(17, 17, 17);
   }
   .modal-body{
    font-size: 18px;
@@ -160,8 +161,10 @@ color: rgb(29, 172, 0);
     font-size: 17px;
     font-weight: 800;
     height: 40px;
+    background-color: red;
+    border: 1px red;
   }
   .fade.modal.show{
-    background-color: rgba(172, 169, 169, 0.171);
+    background-color: rgba(250, 250, 250, 0.363);
     margin-top: -1vh;
   }
