--- a/src/Cadastrar.css
+++ b/src/Cadastrar.css
@@ -148,10 +148,10 @@
   }
 
   .modal-header{
-    background-color: rgb(18, 252, 18);
+    background-color: #1587d3;
 font-size: 20px;
 font-weight: 600;
-color: rgb(17, 17, 17);
+color: rgb(248, 248, 248);
   }
   .modal-body{
    font-size: 18px;
@@ -161,8 +161,7 @@ color: rgb(17, 17, 17);
     font-size: 17px;
     font-weight: 800;
     height: 40px;
-    background-color: red;
-    border: 1px red;
+
   }
   .fade.modal.show{
     background-color: rgba(250, 250, 250, 0.363);
