mudar de nome se ja existe uma imagem no modal

--- a/src/App.css
+++ b/src/App.css
@@ -290,7 +290,7 @@ footer {
   height: 30px;
 
   border: rgba(0, 0, 0, 0.18) solid;
-  border-left-color: #e20202;
+  border-left-color: #3498db;
   border-radius: 50%;
   margin-top: 15px;
   text-align: center;
