--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: rgba(172, 169, 169, 0.822);
+  background-color: rgba(216, 215, 215, 0.822);
 }
 
 @media screen and (max-width: 780px) {
@@ -108,7 +108,7 @@ input[type=email],
   height: 60px;
   color: #FFF;
   background-color: rgb(255, 255, 255);
-  border-bottom: 2px solid #3498db;
+  border-bottom: 2px solid #1684ce;
 }
 
 ul {
@@ -123,11 +123,11 @@ ul li {
   margin-right: 0px;
   float: left;
   margin-top: 10px;
+  color: rgb(9, 99, 173);
 }
 
 ul li a {
-  width: 140px;
-  color: rgb(32, 132, 214);
+  width: 150px;
   display: block;
   text-decoration: none;
   font-size: 15px;
@@ -138,12 +138,30 @@ ul li a {
 }
 
 ul li ul {
-
+  margin-top: 1px;
+  position: fixed;
   background-color: rgb(255, 255, 255);
 }
 
+
 ul li ul li {
+  margin-top: 0px;
+  border-bottom: 1px solid rgba(1, 138, 172, 0.322);
   float: none;
+  height: 50px;
+  cursor: pointer;
+  width: 155px;
+}
+
+ul li ul li a:hover {
+  width: 155px;
+ background-color: #66666656;  
+}
+
+#editarPerfil {
+  font-size: 15px;
+  width: 155px;
+  text-align: center;
 }
 
 ul li ul {
@@ -159,13 +177,23 @@ ul li:hover ul {
   margin-left: 15px;
   margin-top: 15px;
   float: left;
-  color: #017dcf;
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   font-size: 25px;
+  width: 200px;
   font-weight: bold;
+  text-align: center;
 }
 
 #imagemDoUsuario {
   height: 40px;
+  width: 40px;
+  border-bottom: #085d96 2px solid;
+}
+
+#imagemDoUsuario:hover {
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
 }
 
 #botao-cadastrar-se:hover {
@@ -185,7 +213,7 @@ ul li:hover ul {
   font-size: 20px;
   cursor: pointer;
   transition: background .3s;
-  background-color: #3498db;
+  background-color: #1777b8;
   font-weight: bold;
 }
 
@@ -236,7 +264,7 @@ button[disabled] {
 }
 
 #nameUser {
-  color: #3498db;
+  color: #085d96;
   font-size: 10px;
   border-radius: 5px;
   margin-top: 1px;
@@ -279,10 +307,10 @@ footer {
 }
 
 #Sair {
-  background-color: rgb(218, 40, 40);
-  color: #FFF;
+  color: #f81515;
   cursor: pointer;
   border-radius: 0;
+  text-align: center;
 }
 
 #load {
@@ -290,7 +318,7 @@ footer {
   height: 30px;
 
   border: rgba(0, 0, 0, 0.18) solid;
-  border-left-color: #3498db;
+  border-left-color: #0e68a3;
   border-radius: 50%;
   margin-top: 15px;
   text-align: center;
@@ -303,10 +331,6 @@ footer {
   to {
     transform: rotate(360deg);
   }
-}
-
-#editarPerfil {
-  font-size: 15px;
 }
 
 input {
