--- a/src/App.css
+++ b/src/App.css
@@ -341,7 +341,7 @@ input {
 /* adicionar foto modal */
 
 #modal-header-adcionar-foto {
-  background-color: #1587d3;
+  background-color: #0078c9;
   font-size: 20px;
   font-weight: 600;
   color: rgb(248, 248, 248);
@@ -352,7 +352,9 @@ input {
   height: 300px;
   width: 500px;
   text-align: center;
-  color: #1587d3;
+  color: #0176c4;
+  border-top: 2px solid #0078c9;
+  
 }
 
 #btn-primary {
@@ -362,15 +364,14 @@ input {
 
 }
 #uploadImg:hover{
-  background-color: rgba(0, 174, 255, 0.062);
+  background-color: rgba(0, 174, 255, 0.171);
   cursor: pointer;
 }
 #uploadImg {
   width: 100%;
   border-radius: 5px;
-  border: 2px dashed rgba(7, 91, 187, 0.747);
+  border: 2px dashed rgba(3, 46, 95, 0.747);
   height: 100%;
-  background-color: #66666607;
   text-decoration: none;
 }
 label:focus, input:focus, select:focus {
@@ -402,7 +403,11 @@ label {
 
 
 }
-
+#btn-go-out:hover { 
+  font-weight: 800;
+  border: solid 2px #ff0000;
+  background-color: #da0000;
+ }
 #btn-go-out {
  font-weight: 800;
  border: solid 2px #f81515;
@@ -415,4 +420,10 @@ label {
 #imagemCentroUpload{
 margin-bottom: -200px;
 
+}
+
+#imagemHeaderModal{
+ margin-left: 5px;
+ margin-right: 15px;
+ height: 30px;
 }
