--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 
 @media screen and (max-width: 780px) {
 
- 
+
   #imagemDoUsuario {
     display: none;
   }
@@ -116,6 +116,7 @@ input[type=email],
   border: solid 2px #1684ce;
   margin-top: -5px;
 }
+
 ul {
   border-radius: 5px;
   padding: 0;
@@ -159,7 +160,7 @@ ul li ul li {
 
 ul li ul li a:hover {
   width: 155px;
- background-color: #1969fd56;  
+  background-color: #1969fd56;
 }
 
 #editarPerfil {
@@ -181,23 +182,23 @@ ul li:hover ul {
   margin-left: 15px;
   margin-top: 15px;
   float: left;
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
   font-size: 25px;
   width: 200px;
   font-weight: bold;
   text-align: center;
 }
 
-#imagemDoUsuario {
+.imagemDoUsuario {
   height: 40px;
   width: 40px;
   border-bottom: #085d96 2px solid;
 }
 
-#imagemDoUsuario:hover {
-        -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-        transform: scale(1.1);
+.imagemDoUsuario:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 #botao-cadastrar-se:hover {
@@ -276,6 +277,7 @@ button[disabled] {
   margin-left: 0px;
   margin-right: 20px;
 }
+
 #resultadoSalvarImg {
   color: rgb(228, 110, 0);
   font-size: 20px;
@@ -285,6 +287,7 @@ button[disabled] {
   font-weight: 700;
 
 }
+
 #resultado {
   color: rgb(247, 10, 10);
   font-size: 20px;
@@ -357,7 +360,7 @@ input {
   text-align: center;
   color: #0176c4;
   border-top: 2px solid #0078c9;
-  
+
 }
 
 #btn-primary {
@@ -366,10 +369,12 @@ input {
   height: 40px;
 
 }
-#uploadImg:hover{
+
+#uploadImg:hover {
   background-color: rgba(0, 174, 255, 0.171);
   cursor: pointer;
 }
+
 #uploadImg {
   width: 100%;
   border-radius: 5px;
@@ -377,7 +382,10 @@ input {
   height: 100%;
   text-decoration: none;
 }
-label:focus, input:focus, select:focus {
+
+label:focus,
+input:focus,
+select:focus {
   outline: 0;
 }
 
@@ -406,29 +414,32 @@ label {
 
 
 }
-#btn-go-out:hover { 
+
+#btn-go-out:hover {
   font-weight: 800;
   border: solid 2px #ff0000;
   background-color: #da0000;
- }
+}
+
 #btn-go-out {
- font-weight: 800;
- border: solid 2px #f81515;
- background-color: #f81515;
+  font-weight: 800;
+  border: solid 2px #f81515;
+  background-color: #f81515;
 }
 
 #cssImagem {
   width: 40px;
 }
-#imagemCentroUpload{
-margin-bottom: -200px;
+
+#imagemCentroUpload {
+  margin-bottom: -200px;
 
 }
 
-#imagemHeaderModal{
- margin-left: 5px;
- margin-right: 15px;
- height: 30px;
+#imagemHeaderModal {
+  margin-left: 5px;
+  margin-right: 15px;
+  height: 30px;
 }
 
 
@@ -446,34 +457,48 @@ margin-bottom: -200px;
   color: #012035;
 
 }
+
 table {
   width: 100%;
   background-color: rgb(255, 255, 255);
   border: 2px rgb(0, 140, 255) solid;
 }
-tr{
+
+tr {
   border: 1px rgb(0, 140, 255) solid;
 }
-td{
+
+td {
   border: 1px rgb(0, 140, 255) solid;
 }
-tbody{
+
+tbody {
   font-weight: 400;
-  background-color: rgba(9, 112, 209, 0.034);}
-thead tr th  {
+  background-color: rgba(9, 112, 209, 0.034);
+}
+
+thead tr th {
   background-color: #0077ffe1;
   border: 1px rgb(0, 140, 255) solid;
 
 }
-thead  {
+
+thead {
   background-color: #0078c9;
-text-align: center;
+  text-align: center;
 }
-#imagemUsuario {
+
+.imagemUsuario {
   height: 40px;
   width: 40px;
 }
-#loadTable{
+
+.imagemUsuario:hover {
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.1);
+}
+#loadTable {
   width: 30px;
   height: 30px;
   border: rgba(0, 0, 0, 0.18) solid;
