--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,12 @@ h1 {
 }
 
 #login-container {
-  border-radius: 5px;
+  border-top-left-radius: 100px;
+  border-bottom-right-radius: 100px;
   border: solid 1px rgba(163, 163, 163, 0.808);
   background-color: #FFF;
-  width: 410px;
-  height: 460px;
+  width: 450px;
+  height: 480px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 40px;
@@ -56,11 +57,12 @@ h1 {
 }
 
 #cadastrar-container {
-  border-radius: 5px;
+  border-top-left-radius: 100px;
+  border-bottom-right-radius: 100px;
   border: solid 1px rgba(163, 163, 163, 0.808);
   background-color: #FFF;
   width: 450px;
-  height: 550px;
+  height: 580px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 40px;
