--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ h1 {
   padding: 20px 40px;
   margin-top: 5vh;
   text-align: center;
-  box-shadow: 0 5px 15px rgb(61, 61, 61);
+  box-shadow: 0 1px 5px rgb(61, 61, 61);
 }
 
 #cadastrar-container {
@@ -97,7 +97,7 @@ a:hover {
 
 input[type=email],
 [type=password] {
-  border: solid 1px rgba(158, 156, 156, 0.808);
+  border: solid 2px rgba(158, 156, 156, 0.808);
   margin-top: 30px;
   margin-bottom: 25px;
   display: inline-block;
@@ -216,6 +216,7 @@ ul li:hover ul {
   text-align: center;
   margin-top: 10px;
   font-size: 20px;
+  border-radius: 10px;
   cursor: pointer;
   transition: background .3s;
   background-color: #1777b8;
