--- a/src/App.css
+++ b/src/App.css
@@ -39,37 +39,33 @@ h1 {
   font-size: 40px;
   font-weight: 100;
   margin-top: 5px;
+  color: white;
+  padding-top: 40px;
 }
 
 #login-container {
-  border-top-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  border: solid 1px rgba(163, 163, 163, 0.808);
-  background-color: #FFF;
-  width: 450px;
-  height: 480px;
+  background-color: rgba(61, 35, 100, 1);
+  width: 400px;
+  height: 580px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 40px;
   margin-top: 5vh;
   text-align: center;
-  box-shadow: 0 1px 5px rgb(61, 61, 61);
 }
 
 #cadastrar-container {
-  border-top-left-radius: 100px;
-  border-bottom-right-radius: 100px;
-  border: solid 1px rgba(163, 163, 163, 0.808);
-  background-color: #FFF;
-  width: 450px;
-  height: 580px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px 40px;
-  margin-top: 3vh;
-  text-align: center;
-  box-shadow: 0 5px 15px rgb(61, 61, 61);
-}
+ 
+    background-color: rgba(61, 35, 100, 1);
+    width: 400px;
+    height: 580px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px 40px;
+    margin-top: 5vh;
+    text-align: center;
+    border-radius: 25px;
+  }
 
 #editar-container {
   border-radius: 5px;
@@ -95,21 +91,22 @@ a:hover {
   color: blue;
 }
 
-input[type=email],
-[type=password] {
-  border: solid 2px rgba(158, 156, 156, 0.808);
+input[type=email], [type=password] {
   margin-top: 30px;
   margin-bottom: 25px;
   display: inline-block;
-
+  border-radius: 15px;
+  height: 50px;
+  padding: 20px;
 }
+
 
 .menuNav {
   width: 100%;
   height: 60px;
   color: #FFF;
   background-color: rgb(255, 255, 255);
-  border-bottom: 2px solid #1684ce;
+  border-bottom: 2px solid #3d2364;
 }
 
 #menu-selecionar {
@@ -182,7 +179,7 @@ ul li:hover ul {
   margin-left: 15px;
   margin-top: 15px;
   float: left;
-  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  background: rgba(61, 35, 100, 1);
   font-size: 25px;
   width: 200px;
   font-weight: bold;
@@ -214,13 +211,16 @@ ul li:hover ul {
 #botao-entrar {
   display: inline-block;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 20px;
   border-radius: 10px;
   cursor: pointer;
-  transition: background .3s;
-  background-color: #1777b8;
+  
+  background: rgb(255,128,0);
+background: linear-gradient(90deg, rgba(255,128,0,0.835171568627451) 0%, rgba(255,127,0,1) 100%, rgba(61,35,100,1) 100%);
+  color: white;
   font-weight: bold;
+  padding: 5px;
 }
 
 input[type=submit],
@@ -305,14 +305,14 @@ button[disabled] {
 
 #link {
   font-size: 20px;
-  color: rgb(0, 0, 0);
+  color: white;
   padding: 10px;
 }
 
 #link-alterar-senha{
   margin-top: -10px;
   font-size: 20px;
-  color: rgb(0, 68, 255);
+  color: white;
   padding: 10px;
   display: inline-block;
   text-decoration: none;
@@ -388,7 +388,7 @@ input {
 #uploadImg {
   width: 100%;
   border-radius: 5px;
-  border: 2px dashed rgba(3, 46, 95, 0.747);
+  border: 2px dashed rgba(61, 35, 100, 1);
   height: 100%;
   text-decoration: none;
 }
@@ -471,15 +471,15 @@ label {
 table {
   width: 100%;
   background-color: rgb(255, 255, 255);
-  border: 2px rgb(0, 140, 255) solid;
+  border: 2px solid rgba(61, 35, 100, 1);
 }
 
 tr {
-  border: 1px rgb(0, 140, 255) solid;
+  border: 1px  solid rgba(61, 35, 100, 1);
 }
 
 td {
-  border: 1px rgb(0, 140, 255) solid;
+  border: 1px solid rgba(61, 35, 100, 1);
 }
 
 tbody {
@@ -488,8 +488,8 @@ tbody {
 }
 
 thead tr th {
-  background-color: #0077ffe1;
-  border: 1px rgb(0, 140, 255) solid;
+  background-color: rgba(61, 35, 100, 1);
+  border: 1px  solid rgba(61, 35, 100, 1) ;
 
 }
 
